--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
     <h3>Score: <span id="result"></span></h3>
 
-    <div class="grid"></div>
+    <div class="grid">
+        
+    </div>
     
 </body>
 </html>
